# saju

./: .dockerignore  .gitignore  Dockerfile  README.md  TODO.md  start.sh
.github/workflows/: deploy.yml
backend/: .env.example  Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt
backend/app/: db.py  db_models.py  llm.py  main.py  models.py  services.py
backend/tests/: test_api.py
frontend/: eslint.config.mjs  next.config.ts  package-lock.json
frontend/src/app/: HomeClient.tsx  globals.css  layout.tsx  page.module.css  page.tsx
frontend/src/app/explore/: page.module.css  page.tsx
frontend/src/app/glossary/: page.module.css  page.tsx
frontend/src/app/input/: page.module.css  page.tsx
frontend/src/app/learn/: page.module.css  page.tsx
frontend/src/app/learn/intro/: page.tsx
frontend/src/app/learn/pillars/: page.tsx
frontend/src/app/learn/ten-gods/: page.tsx
frontend/src/app/lottery/: LotteryClient.tsx  page.module.css  page.tsx
frontend/src/app/me/: page.module.css  page.tsx
frontend/src/app/og/: route.tsx
frontend/src/app/privacy/: page.module.css  page.tsx
frontend/src/app/reading/: ReadingClient.tsx  page.module.css  page.tsx
frontend/src/app/saju/: page.module.css  page.tsx
frontend/src/app/story/: article.module.css  page.tsx
frontend/src/components/: ShareButton.tsx  SiteHeader.module.css  SiteHeader.tsx
frontend/src/components/ui/: Button.module.css  Button.tsx  Card.module.css  Card.tsx  SelectBox.module.css  SelectBox.tsx  Tooltip.module.css  Tooltip.tsx
frontend/src/lib/: api.ts  lottery-utils.ts
(+9 files in other folders)
